kustomize/bases/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: blog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blog
    spec:
      serviceAccountName: blog
      containers:
        - name: blog
          image: europe-north1-docker.pkg.dev/personal-artifacts-353012/harmelodic/blog:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
            - name: management-http
              containerPort: 8081
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          startupProbe:
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 10
            httpGet:
              path: /actuator/health/liveness
              port: management-http
          readinessProbe:
            periodSeconds: 10
            failureThreshold: 10
            httpGet:
              path: /actuator/health/readiness
              port: management-http
          livenessProbe:
            periodSeconds: 10
            failureThreshold: 10
            httpGet:
              path: /actuator/health/liveness
              port: management-http
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.33.4-alpine
          command:
            - /cloud_sql_proxy
            - -ip_address_types=PRIVATE
            - -log_debug_stdout
            - -enable_iam_login
            - -instances=$(INSTANCE_CONNECTION_NAME)=tcp:5432
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
